Adjusted build script some more
Wasn't really liking how the build output came out in travis, so I put it back
into the script in .travis.yml. The script now just runs and kills particle,
which should also be useful for other CI systems.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install ubuntu-sdk qtbase5-private-dev qtdeclarative5-private-dev libqt5opengl5-dev
 
-script: ./build.sh
+script: "go build -v -o particle main.go && ./run.sh"
 
 notifications:
   email: false
