Another attempt to fix go get failure
For whatever reason, wercker checks out the HEAD commit during the initial
step where it acquires your code. This detaches the head, which is causing
some kind of failure with go get. Still no idea what the problem is.

--- a/wercker.yml
+++ b/wercker.yml
@@ -25,7 +25,7 @@ build:
         code: |
           cd $WERCKER_SOURCE_DIR
           go version
-          go get -u -v
+          go get -u -v github.com/niemeyer/qml
 
     - script:
         name: go build
